update maven plugin config